--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -58,6 +58,7 @@
             <% if DeployGroup.enabled? %>
               <li><%= link_to "Environments", admin_environments_path %></li>
               <li><%= link_to "Deploy Groups", admin_deploy_groups_path %></li>
+              <li><%= link_to "Dependency Groups", admin_environment_variable_groups_path %></li>
             <% end %>
             <li><%= link_to "Projects", admin_projects_path %></li>
             <li><%= link_to "Commands", admin_commands_path %></li>
